# go-xdelta

./: .ci.yml  .gitignore  CMakeLists.txt  README.md
xdelta3/: config.h.in  xdelta3-internal.h  xdelta3-main.h  xdelta3.c  xdelta3.h
xdelta3/c_api/: c_api_tests.c  xdelta3-api.c  xdelta3-api.h
xdelta3/go_api/: common_test.go  decode.go  decode_test.go  encode.go  encode_test.go  go.mod  helpers.go  helpers_test.go
